controller methods for full crud
